--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,12 @@
     <div class="al-footer-right">Created By B.T <i class="ion-heart"></i></div>
     <div class="al-footer-main clearfix">
       <div class="al-copy">Bussiness Management 2018</div>
-      <ul class="al-share clearfix">
+      <!--<ul class="al-share clearfix">
         <li><i class="socicon socicon-facebook"></i></li>
         <li><i class="socicon socicon-twitter"></i></li>
         <li><i class="socicon socicon-google"></i></li>
         <li><i class="socicon socicon-github"></i></li>
-      </ul>
+      </ul>-->
     </div>
   </footer>
 
