--- a/src/auth.html
+++ b/src/auth.html
@@ -30,19 +30,19 @@
     <h1>Sign in to Blur Admin</h1>
     <a href="reg.html" class="auth-link">New to Blur Admin? Sign up!</a>
 
-    <form class="form-horizontal">
+    <form class="form-horizontal" ng-submit="login.submit()">
       <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+        <label for="inputEmail3" class="col-sm-2 control-label" >Email</label>
 
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+          <input type="email" ng-model="login.email" class="form-control" id="inputEmail3" placeholder="Email">
         </div>
       </div>
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
 
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+          <input type="password" ng-model="login.password" class="form-control" id="inputPassword3" placeholder="Password">
         </div>
       </div>
       <div class="form-group">
