collapsible panel in list of data

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <footer class="al-footer clearfix">
-    <div class="al-footer-right">Created By B.T <i class="ion-heart"></i></div>
+    <div class="al-footer-right">Developed By: <img src="../../../assets/img/btz.png" width="50px" height="30px" style="margin-bottom: 5px;"/> Solutions </div>
     <div class="al-footer-main clearfix">
       <div class="al-copy">Bussiness Management 2018</div>
       <!--<ul class="al-share clearfix">
