--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
   <footer class="al-footer clearfix">
     <div class="al-footer-right">Developed By: <img src="../../../assets/img/btz.png" width="50px" height="30px" style="margin-bottom: 5px;"/> Solutions </div>
     <div class="al-footer-main clearfix">
-      <div class="al-copy">Bussiness Management 2018</div>
-      <!--<ul class="al-share clearfix">
+      <!--<div class="al-copy">Bussiness Management 2018</div>
+      <ul class="al-share clearfix">
         <li><i class="socicon socicon-facebook"></i></li>
         <li><i class="socicon socicon-twitter"></i></li>
         <li><i class="socicon socicon-google"></i></li>
