--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       <button type="button" class="btn btn-default" data-toggle="modal" data-target="#exampleModal">Developed By: <img src="../../../assets/img/logo.png" width="50px" height="30px" style="margin-bottom: 0px;"/></button>
        <br/><br/></div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" >
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -61,17 +61,17 @@
             <div class="col-md-4">
             <div class="panel panel-default">
               <div class="panel-heading" style="height: 100px">Panel with panel-default class</div>
-              <div class="panel-body">Panel Content</div>
+              <div class="panel-body">Abubakar Iqbal</div>
             </div></div>
               <div class="col-md-4">
                 <div class="panel panel-default">
                   <div class="panel-heading" style="height: 100px">Panel with panel-default class</div>
-                  <div class="panel-body">Panel Content</div>
+                  <div class="panel-body">Tanzeel Ahmad</div>
                 </div></div>
               <div class="col-md-4">
                 <div class="panel panel-default">
                   <div class="panel-heading" style="height: 100px">Panel with panel-default class</div>
-                  <div class="panel-body">Panel Content</div>
+                  <div class="panel-body">Zeeshan Ramzan</div>
                 </div></div>
             </div>
             </div>
